infra/k8s/dev/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: anujgogroup/auth
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts: # Optional volume mount for temporary logs
            - name: auth-logs
              mountPath: /app/logs
          securityContext: # Correctly placed container-level security context
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
      volumes: # Ephemeral volume for logs
        - name: auth-logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
