infra/k8s/dev/kafka-sts.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-srv
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: tcp-kafka-int
      port: 9092
      protocol: TCP
      targetPort: tcp-kafka-int
    - name: tcp-kafka-ctrl
      port: 29093
      protocol: TCP
      targetPort: tcp-kafka-ctrl
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  serviceName: kafka-srv
  replicas: 1 # Single replica for development
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      serviceAccountName: kafka
      containers:
      - name: kafka
        image: docker.io/confluentinc/confluent-local:7.5.0
        imagePullPolicy: IfNotPresent
        command:
        - sh
        - -exc
        - |
          export CLUSTER_ID=$(kafka-storage random-uuid) && \
          export KAFKA_NODE_ID=$(echo ${HOSTNAME##*-}) && \
          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${HOSTNAME}.kafka-srv.default.svc.cluster.local:9092 && \
          export KAFKA_CONTROLLER_QUORUM_VOTERS="0@kafka-0.kafka-srv.default.svc.cluster.local:29093" && \
          exec /etc/confluent/docker/run
        ports:
        - containerPort: 9092
          name: tcp-kafka-int
          protocol: TCP
        - containerPort: 29093
          name: tcp-kafka-ctrl
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1400Mi
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - name: kafka-data
          mountPath: /var/lib/kafka
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: kafka-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
  updateStrategy:
    type: RollingUpdate
