infra/k8s/dev/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
  labels:
    app: products
    app.kubernetes.io/instance: products-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
        app.kubernetes.io/instance: products-api-service
    spec:
      containers:
        - name: products
          image: anujgogroup/products
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "1.5Gi"
              cpu: "1.5"
            requests:
              memory: "1Gi"
              cpu: "750m"
          volumeMounts: # Optional volume mount for temporary logs
            - name: products-logs
              mountPath: /app/logs
          securityContext: # Correctly placed container-level security context
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
      volumes: # Ephemeral volume for logs
        - name: products-logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
