infra/k8s/dev/products-mongodb-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-mongodb-sts
  namespace: default
spec:
  replicas: 1
  serviceName: products-mongodb-srv
  selector:
    matchLabels:
      app: products-mongodb
  template:
    metadata:
      labels:
        app: products-mongodb
    spec:
      securityContext:
        fsGroup: 1000 # Ensures /data/db is writable by the container
      containers:
        - name: products-mongodb
          image: mongo:6.0.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          # Run in replica set mode (no auth)
          args: ["--replSet", "rs0"]
          volumeMounts:
            - name: products-mongodb-data
              mountPath: /data/db
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: products-mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongodb-srv
  namespace: default
  annotations:
    field.cattle.io/description: "MongoDB Cluster IP"
spec:
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: products-mongodb
  type: ClusterIP
