infra/k8s/dev/products-postgres-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-mongodb-sts
spec:
  serviceName: products-mongodb-sts
  replicas: 1
  selector:
    matchLabels:
      app: products-mongodb
  template:
    metadata:
      labels:
        app: products-mongodb
    spec:
      containers:
        - name: products-mongodb
          image: mongo:6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: products-mongodb-data
              mountPath: /data/db
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 5
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: products-mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongodb-srv
spec:
  selector:
    app: products-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
