infra/k8s/dev/products-redis-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-redis-sts
spec:
  serviceName: products-redis-sts
  replicas: 1
  selector:
    matchLabels:
      app: products-redis
  template:
    metadata:
      labels:
        app: products-redis
    spec:
      containers:
        - name: redis
          image: redis:7.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: products-redis-data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: products-redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: products-redis-srv
spec:
  selector:
    app: products-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
