infra/k8s/dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Rewrites path to capture group for backend service
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60" # Timeout for reading responses from the backend
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60" # Timeout for sending requests to the backend
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Disable HTTPS redirection for development
spec:
  ingressClassName: nginx
  rules:
    - host: microservices.dev
      http:
        paths:
          - path: /v1/api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /v1/api/products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
